# miiflow-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  document_qa_workflow.py  pyproject.toml  pytest.ini  test_http_working.py  test_image_vision.py  test_multiple_tool_calls.py  test_native_react.py  test_observability_demo.py  test_structured_output_demo.py  test_xml_integration.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  sync-to-monorepo.yml  test.yml
docs/: api.md  context-injection-fix.md  observability.md  parallel-execution-architecture.md  quickstart.md  tutorial-agents.md  tutorial-tools.md
examples/: agent_evaluation_example.py  basic_chat.py  basic_usage.py  context_injection.py  observability_example.py  plan_execute.py  react_agent.py  streaming.py  subagents.py  test_react_streaming.py  test_unified_streaming.py
examples/notebooks/: plan_execute_tutorial.ipynb  react_tutorial.ipynb
examples/tools/: calculator.py  finance.py  news.py  posts_api.py  weather_api.py
miiflow_agent/: __init__.py
miiflow_agent/artifacts/: __init__.py  types.py
miiflow_agent/core/: __init__.py  agent.py  callback_context.py  callbacks.py  checkpoint.py  client.py  config.py  context_compression.py  data_reference.py  interrupt.py  message.py  observation.py  schema_normalizer.py  stream_normalizer.py  streaming.py  subagent.py
miiflow_agent/examples/: streaming_demo.py
miiflow_agent/models/: anthropic.py  base.py  google.py  openai.py
miiflow_agent/providers/: anthropic_client.py  bedrock_client.py  gemini_client.py  groq_client.py  mistral_client.py  ollama_client.py  openai_client.py  openrouter_client.py  xai_client.py
miiflow_agent/utils/: __init__.py  image.py  pdf_extractor.py
miiflow_agent/visualization/: __init__.py  registry.py  types.py
miiflow_llm/: __init__.py
miiflow_llm/agents/: __init__.py  agent_client.py  context.py
miiflow_llm/core/: __init__.py  agent.py  client.py  message.py  streaming.py  tools.py
miiflow_llm/examples/: streaming_demo.py
miiflow_llm/providers/: __init__.py  anthropic_client.py  bedrock_client.py  gemini_client.py  groq_client.py  mistral_client.py  ollama_client.py  openai_client.py  openrouter_client.py  stream_normalizer.py  together_client.py  xai_client.py
miiflow_llm/utils/: __init__.py  env.py  pdf_extractor.py
scripts/: release.sh
tests/: __init__.py  conftest.py  test_context_injection.py  test_fuzzy_tool_matching.py  test_llm_client.py  test_multiple_tool_calls.py  test_native_react.py  test_structured_output_demo.py  test_xml_integration.py
tests/core/: __init__.py  test_approval_resume_execution.py  test_checkpoint.py  test_clarification_short_circuit_integration.py  test_configured_subagent.py  test_data_reference.py  test_dedupe_gate.py  test_excessive_same_tool.py  test_explicit_schema.py  (+22 more)
(+102 files in other folders)
