[tool.poetry]
name = "miiflow-llm"
version = "0.1.0"
description = "A lightweight, unified interface for LLM providers with streaming, tool calling, and structured output support"
authors = ["Debjyoti Ray <debjyotiray0104@gmail.com/ dev@miiflow.ai>", "Yaozhong Kang <yaozhong@miiflow.ai>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/MiiFlow/miiflow-llm"
repository = "https://github.com/MiiFlow/miiflow-llm"
documentation = "https://github.com/MiiFlow/miiflow-llm#readme"
keywords = ["llm", "openai", "anthropic", "agents", "streaming", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.50.0"
anthropic = "^0.40.0"
pydantic = "^2.0.0"
tiktoken = "^0.8.0"
tenacity = "^9.0.0"
aiohttp = "^3.9.0"
structlog = "^24.0.0"
typing-extensions = "^4.8.0"

# Optional dependencies for specific providers
groq = { version = "^0.13.0", optional = true }
google-generativeai = { version = "^0.8.0", optional = true }
together = { version = "^1.3.0", optional = true }

# Optional observability dependencies
opentelemetry-api = { version = "^1.27.0", optional = true }
opentelemetry-sdk = { version = "^1.27.0", optional = true }
prometheus-client = { version = "^0.21.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.11.0"
pre-commit = "^4.0.0"

[tool.poetry.extras]
groq = ["groq"]
google = ["google-generativeai"]
together = ["together"]
observability = ["opentelemetry-api", "opentelemetry-sdk", "prometheus-client"]
all = ["groq", "google-generativeai", "together", "opentelemetry-api", "opentelemetry-sdk", "prometheus-client"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=miiflow_llm",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
]
asyncio_mode = "auto"
